@@ -30,7 +30,7 @@ CREATE TABLE atomic.events (
 	dvce_tstamp timestamp,
 	-- Event
 	event varchar(128) encode text255,
-	event_vendor varchar(128) encode text32k,          -- Removed not null constraint in 0.3.0
+	                                                   -- Removed event_vendor in 0.4.0
 	event_id char(36) not null unique,                 -- Changed from varchar(38) in 0.3.0
 	txn_id int,
 	-- Namespacing and versioning
@@ -89,8 +89,8 @@ CREATE TABLE atomic.events (
 	se_property varchar(255) encode text32k,
 	se_value double precision,
 	-- Custom unstructured event
-	ue_name varchar(255) encode text255,               -- Added in 0.3.0
-	ue_properties varchar(10000) encode raw,           -- Added in 0.3.0
+	                                                   -- Removed ue_name in 0.4.0
+	unstruct_event varchar(10000) encode raw,          -- Renamed ue_properties to unstruct_event in 0.4.0
 	-- Ecommerce
 	tr_orderid varchar(255) encode raw,
 	tr_affiliation varchar(255) encode text255,
