@@ -3,6 +3,7 @@ Version 0.9.X (2014-XX-XX)
 Scala Common Enrich: stored etl_tstamp in new field in CanonicalOutput (#818)
 Redshift: bumped table-def to 0.4.0
 Redshift: added etl_tstamp to atomic.events (#819)
+Redshift: removed event_vendor and ue_name and renamed ue_properties to unstruct_event (#834)
 Postgres: bumped table-def to 0.3.0
 Postgres: added etl_tstamp to atomic.events (#820)
 
